
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int alnum_nop ;
typedef int UINT ;
typedef char* UCHAR ;


 char** malloc (int) ;
 int memset (char**,int ,int) ;
 int rand () ;
 int strcat (char**,...) ;

UCHAR *get_nop_slide(UINT size, UINT slide)
{
    UINT i, x, append_dec_eax = 0;
    UCHAR alnum_nop[][3] = {
        "AI",
        "BJ",
        "CK",
        "EM",
        "FN",
        "GO",
        "HG",
        "HO",

        "DL",
    };
    UCHAR *nop_slide;
    nop_slide = malloc(size);
    memset(nop_slide, 0, size);
    if(size%2)
    {
        append_dec_eax = 1;
        size--;
    }
    for(i=0; i<(size/2); i++) {
        do
            x = rand()%(sizeof(alnum_nop)/3);
        while
            ((slide==2)&&(x==6||x==7));
        strcat(nop_slide, alnum_nop[x]);
    }
    if(append_dec_eax)
    {
        strcat(nop_slide, slide==1?"H":rand()%2?"G":"O");
    }
    return nop_slide;
}
